<resources>
    <string name="app_name">Formulário</string>

    <string name="nome">Nome completo</string>
    <string name="e_mail">E-mail</string>
    <string name="receber_emails">Deseja receber atualizações por e-mail?</string>
    <string name="telefone">Telefone</string>
    <string name="celular">Telefone celular</string>
    <string name="adicionar_celular">Adicionar telefone celular</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="ano_conclusao">Ano de conclusão</string>
    <string name="instituicao">Instituição</string>
    <string name="titulo_monografia">Título da monografia</string>
    <string name="orientador">Orientador</string>
    <string name="vagas_interesse">Vagas de interesse</string>
    <string name="salvar">Salvar</string>
    <string name="limpar">Limpar</string>
    <string name="outro_sexo">Digite aqui</string>
    <string name="formacao_academica">Formação Acadêmica</string>
    <string name="sexo">Sexo</string>
    <string name="havagas">HaVagas!</string>

    <string-array name="sexo">
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Não-Binário</item>
        <item>Prefiro não informar</item>
        <item>Outro</item>
    </string-array>

    <string-array name="tipo_telefone">
        <item>Residencial</item>
        <item>Comercial</item>
    </string-array>

    <string-array name="formacao">
        <item>Fundamental</item>
        <item>Médio</item>
        <item>Graduação</item>
        <item>Especialização</item>
        <item>Mestrado</item>
        <item>Doutorado</item>
    </string-array>
</resources>
